[gd_scene load_steps=4 format=3 uid="uid://cof2sqvd0rb0a"]

[ext_resource type="Texture2D" uid="uid://dujoyv2fb471r" path="res://assets/ui/button_mockup.png" id="1_klgdb"]
[ext_resource type="Script" uid="uid://nu2352wxmdog" path="res://scenes/ui/menu/menu.gd" id="1_mcvr8"]
[ext_resource type="FontFile" uid="uid://jbbx5lupeleb" path="res://assets/m5x7.ttf" id="3_e0arn"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_mcvr8")

[node name="Slot0" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(160, 60)
offset_left = 471.0
offset_top = 9.0
offset_right = 631.0
offset_bottom = 69.0
texture = ExtResource("1_klgdb")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Slot0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.0
offset_right = 50.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_e0arn")
theme_override_font_sizes/font_size = 32
text = "P A R T Y"

[node name="Slot1" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(160, 60)
offset_left = 471.0
offset_top = 71.0
offset_right = 631.0
offset_bottom = 131.0
texture = ExtResource("1_klgdb")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Slot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -13.0
offset_right = 52.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_e0arn")
theme_override_font_sizes/font_size = 32
text = "I T E M S"

[node name="Slot2" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(160, 60)
offset_left = 471.0
offset_top = 133.0
offset_right = 631.0
offset_bottom = 193.0
texture = ExtResource("1_klgdb")
region_rect = Rect2(0, 0, 160, 60)

[node name="Label" type="Label" parent="Slot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -13.0
offset_right = 61.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_e0arn")
theme_override_font_sizes/font_size = 32
text = "C A U G H T"

[node name="Slot3" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(160, 60)
offset_left = 471.0
offset_top = 195.0
offset_right = 631.0
offset_bottom = 255.0
texture = ExtResource("1_klgdb")
region_rect = Rect2(0, 0, 160, 60)

[node name="Label" type="Label" parent="Slot3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -13.0
offset_right = 39.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_e0arn")
theme_override_font_sizes/font_size = 32
text = "S A V E"

[node name="Slot4" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(160, 60)
offset_left = 471.0
offset_top = 258.0
offset_right = 631.0
offset_bottom = 318.0
texture = ExtResource("1_klgdb")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Slot4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -13.0
offset_right = 72.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_e0arn")
theme_override_font_sizes/font_size = 32
text = "O P T I O N S"
